less/app.less
/* ... */
.loading {
	padding-left: 20px;
}

// Fixed header
// --------------------------------------------------

.fixed-header {
	display: none;
	position: fixed;
	top: 0;
	left: 0;
	right: 0;
	height: 4rem;
	padding: 0 @grid-gutter-width;
	background: @music-hp-dark;
	color: @music-medium;
	border-bottom: 1px solid #253645;
	z-index: @z-fixed-header;
	-webkit-backface-visibility: hidden; // prevent flickering of bar on scroll in Chrome/Safari
	-webkit-transform: translate3d(0,0,0);

	@media screen and (max-width: @screen-xs-max){
		position: absolute;
		padding: 0 @grid-gutter-width / 2;
	}

	.logo,
	.slug,
	.title {
		display: inline-block;
		line-height: 4rem;
		vertical-align: middle;
		margin: 0 1rem 0 0;
	}

    .play-toggle,
	.full-list,
	.share,
    .chromecast,
    .fullscreen {
		float: left;
		line-height: 4rem;
		vertical-align: middle;
		margin: 0 1rem 0 0;
	}

	.fullscreen {
		.touch & {
			.hide;
		}
	}

    .play-toggle {
        display: none;

        .play-all {
            display: none;
        }
    }

    .chromecast {
        display: none;
    }

	.logo {
		height: 2.5rem;
		max-height: 50px;

		@media screen and (max-width: @screen-xs-max){
			margin-right: 10px;
			height: 2rem;
		}
	}

	.slug {
		font-family: @font-family-condensed;
		color: @music-red-light;
		text-transform: uppercase;
	}

	.title {
		font-size: @font-size-base * 1.1;
		font-family: 'Gotham SSm';
		text-transform: uppercase;
		letter-spacing: 0.1rem;
		color: @white;
		-webkit-font-smoothing: antialiased;

		@media screen and (max-width: @screen-xs-max){
			margin-right: 0;
		}

		@media screen and (min-width: @screen-sm){
			font-size: @font-size-base * 1.2;
		}
	}

	.project-logo {
		height: 2.5rem;
	}

	.fixed-header-controls {
		.pull-right;
	}

	.fixed-header-controls a {
		font-size: @font-size-base * 0.875;
		color: @music-hp-link-color;
		-webkit-font-smoothing: antialiased;
		// font-family: @font-family-condensed;
		text-transform: lowercase;
		// letter-spacing: 1px;
		cursor: pointer;

		&:hover {
			color: @white;
			text-decoration: none;
		}
	}

	.fixed-header-controls img {
		height: 1.75rem;
		display: inline-block;
		margin-top: -0.25rem;
	}

	.fixed-header-controls > div {
		margin-right: 0.5rem;
	}

	@media screen and (max-width: @screen-sm-max){
		.slug { display: none; }
	}

	@media screen and (max-width: @screen-xs-max){
		.full-list,
		.share,
		.play-toggle {
			display: none !important;
		}
	}
}

// Playlist
// --------------------------------------------------

.mobile-share {
	// padding: 0 1rem;
	background: #142129;
	overflow: hidden;

	li {
		width: 50%;
		padding: 0;
		float: left;

		&:first-child {
			padding-right: 2px;
		}

		&:last-child {
			padding-left: 2px;
		}
	}

	li a {
		display: block;
		height: 3rem;
		line-height: 3rem;
		vertical-align: middle;
		text-align: center;
		background-color: @music-dark;
		color: @music-medium;
	}
}

.show-history,
.show-history:hover,
.show-history:focus,
.show-history:visited {
	.transition(all 0.2s ease-in-out);
	color: @music-hp-link-color;
	border: 1px solid @music-hp-link-color;
	// font-family: @font-family-condensed;
	text-transform: uppercase;
	letter-spacing: 0.1rem;
	font-size: @font-size-base * 0.712;
	position: fixed;
	top: 5rem;
	right: @grid-gutter-width;
	background: fadeout(@music-hp-dark, 10%);
	padding: 0.5rem;
	border-radius: 4px;
	text-decoration: none;
	.scale(1);
	.translate(0,0);
	opacity: 1;
	width: 10rem;
	text-align: center;

	.no-touch & {
		&:hover {
			color: @white;
			border-color: @white;
			text-decoration: none;
		}
	}

	&.offscreen {
		.scale(0);
		opacity: 0;
	}

	@media screen and (max-width: @screen-xs-max){
		width: auto;
		top: 0;
		left: 0;
		right: 0;
		height: 4rem;
		line-height: 3rem;
		border-width: 0 0 1px 0;
		border-color: #253645;
		border-radius: 0;
		text-align: center;
		vertical-align: middle;
		font-size: @font-size-base;
		background: fadeout(@music-hp-dark, 4%);

		&.offscreen {
			.scale(1);
			.translate(0,-100%);
		}
	}


}

.songs {
	display: none;
	color: @white;
	background-color: #142129;
	background: repeating-radial-gradient(circle at 0 0, #121b21, #19232b 7rem);
	padding-top: 4rem;
	padding-bottom: 6rem;
}
/* ... */

